<resources>
    <string name="app_name">Hostliz</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_option_button">LoginOptionButton</string>
    <string name="adminButton">Login as Admin</string>
    <string name="wardenButton">Login as Warden</string>
    <string name="studentButton">Student Zone</string>
    <string name="exit">Exit</string>
    <string name="title_activity_admin_login">Admin_login</string>
    <string name="userHead">Welcome</string>
    <string name="allocation">Allocate Rooms</string>
    <string name="Reg">Register Warden</string>
    <string name="title_activity_room__allocation">Room_Allocation</string>
    <string name="title_activity_register__warden">Register_Warden</string>
    <string name="title_activity_warden__login">Warden_Login</string>
    <string name="title_activity_warden__take_attendence">Warden_TakeAttendence</string>
    <string name="title_activity_view__students__details">View_Students_Details</string>
    <string name="title_activity_update__student">Update_Student</string>
    <string name="title_activity_display_user">DisplayUser</string>
    <string name="title_activity_delete__student">Delete_Student</string>
    <string name="title_activity_contact_us">Map</string>
    <string name="forgetlink">Forget password</string>
    <string name="title_activity_slide_show1">SlideShow1</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mark_attendence">MarkAttendence</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="title_activity_rate_app">Rate_app</string>
    <string name="title_activity_gallery__show">Gallery_Show</string>
    <string name="title_activity_rating__bar">Rating_Bar</string>
    <string name="title_activity_details__attendence">Details_Attendence</string>
    <string name="title_activity_profile__user">Profile_User</string>
    <string name="title_activity_profile">Profile</string>
    <string name="version">Android Studio Version\n1.4</string>
    <string name="app_name1">Application:\n Hosteliz</string>
    <string name="android_version">Android Version:\n 5.1.1</string>
    <string name="about">About:\n Hostliz is a app in which data of Students in hostel has been stored.\n
    In this warden will take the attendence of the students on the daily basis.\n
        The main key person of this application is Admin because he only has the authority to allocate rooms\n to the students and
        registered warden who will take attendence on the daily basis.\n
        I have put my all efforts that i have learned try to implement in it.\n
        Hope You guys like my app...\n
        Thank you...!!!

    </string>
    <string name="title_activity_view__students__details1">View_Students_Details1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_student_info_zone">student_info_zone</string>
</resources>
