<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"   style="@style/matchWidthheightMatch"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
   tools:context="com.ektastudio.engggirl.hostliz.LoginOptionButton"
    android:orientation="vertical"
    >
<Button
    style="@style/matchWidthWrapHeight"
    android:background="@android:color/black"
    android:text="Welcome"
    android:textColor="@android:color/white"
    android:textStyle="bold"
    />
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="250dp" android:padding="10dp"
        android:src="@drawable/second"
        />


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/adminButton1"
        style="@style/matchWidthWrapHeight"
        android:text="@string/adminButton"
        android:padding="10dp"
        android:background="@android:color/holo_orange_dark"
        />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/WardenButton1"
        style="@style/matchWidthWrapHeight"
        android:padding="10dp"
        android:text="@string/wardenButton"
        android:background="@android:color/holo_orange_dark"
        />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/StudentButton1"
        style="@style/matchWidthWrapHeight"
        android:text="@string/studentButton"
        android:padding="10dp"
        android:background="@android:color/holo_orange_dark"
        />
</LinearLayout>
